--- a/products.html
+++ b/products.html
@@ -3,111 +3,136 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comms Black Mobile - Products</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="load.js" defer></script>
-  <script src="main.js" defer></script>
+  <title>Commsblack Mobile - Products</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Header -->
-  <div id="header"></div>
-
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-content">
-      <h2>Secure Communication Kits for Privacy & Freedom</h2>
-      <p>From everyday privacy to sovereign global connectivity — choose the kit that fits your lifestyle.</p>
+  <header>
+    <div class="logo">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-label="Commsblack Mobile logo">
+        <defs>
+          <clipPath id="globeClip"><circle cx="32" cy="32" r="28"/></clipPath>
+          <style>.globe{stroke:#3A76F0;stroke-width:2.5;fill:none;stroke-linecap:round;stroke-linejoin:round}
+          .lock-body{fill:#000;stroke:none}.lock-shackle{stroke:#000;stroke-width:2.5;fill:none;stroke-linecap:round;stroke-linejoin:round}</style>
+        </defs>
+        <rect x="18" y="28" width="28" height="20" rx="3" ry="3" class="lock-body"/>
+        <path d="M20 28 v-3 a12 12 0 0 1 24 0 v3" class="lock-shackle"/>
+        <g class="globe" clip-path="url(#globeClip)">
+          <line x1="-6" y1="32" x2="70" y2="32"/>
+          <line x1="32" y1="-6" x2="32" y2="70"/>
+          <path d="M26 -6 C10 24, 10 40, 26 70"/>
+          <path d="M38 -6 C54 24, 54 40, 38 70"/>
+        </g>
+        <circle cx="32" cy="32" r="28" class="globe"/>
+      </svg>
+      <div class="logo-text"><span class="black">Commsblack</span><span class="blue">Mobile</span></div>
     </div>
+    <nav>
+      <a href="index.html">Mission</a>
+      <a href="products.html">Products</a>
+      <a href="academy.html">Academy</a>
+      <a href="faqs.html">FAQ’s</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+    <div class="menu-toggle"><span></span><span></span><span></span></div>
+  </header>
+
+  <!-- Mobile Nav -->
+  <div class="mobile-nav" id="mobileNav">
+    <a href="index.html">Mission</a>
+    <a href="products.html">Products</a>
+    <a href="academy.html">Academy</a>
+    <a href="faqs.html">FAQ’s</a>
+    <a href="contact.html">Contact</a>
+  </div>
+
+  <!-- Hero -->
+  <section class="hero">
+    <h2>Secure Communication Kits for Privacy & Freedom</h2>
+    <p>From everyday privacy to sovereign global connectivity — choose the kit that fits your lifestyle.</p>
   </section>
 
-  <!-- Product Grid -->
-  <section id="products" class="section">
-    <div class="container">
-      <h2 class="section-title">Communication Suites</h2>
+  <!-- Products -->
+  <section id="products">
+    <h2>Communication Suites</h2>
+    <div class="products-grid">
+      <div class="product-card">
+        <h3>Everyday Aussie</h3>
+        <p class="tagline">Privacy Made Simple</p>
+        <ul class="products-list">
+          <li>GrapheneOS Pixel 8a</li>
+          <li>Phone case + privacy screen</li>
+          <li>Small Faraday bag</li>
+          <li>Customer’s SIM</li>
+          <li>USB-C charging cable + adapter</li>
+          <li>30W USB power charger</li>
+        </ul>
+        <p class="product-price">$1,400 AUD</p>
+        <p class="product-note">Payment in XMR — live conversion at checkout</p>
+        <a href="product1.html" class="cta">Buy Now</a>
+      </div>
 
-      <div class="product-grid">
-        
-        <!-- Everyday Aussie -->
-        <div class="product-card">
-          <h3>Everyday Aussie</h3>
-          <p class="subtitle">Privacy Made Simple</p>
-          <ul>
-            <li>✅ GrapheneOS Pixel 8a</li>
-            <li>✅ Phone case + privacy screen</li>
-            <li>✅ Small Faraday bag</li>
-            <li>✅ Customer’s SIM</li>
-            <li>✅ USB-C charging cable + adapter</li>
-            <li>✅ 30W USB power charger</li>
-          </ul>
-          <p class="price">$1,400 AUD</p>
-          <p class="note">Payment in XMR — live conversion at checkout</p>
-          <a href="product1.html" class="btn">Buy Now</a>
-        </div>
+      <div class="product-card">
+        <h3>Anonymous Aussie</h3>
+        <p class="tagline">Anonymity Without Compromise</p>
+        <ul class="products-list">
+          <li>GrapheneOS Pixel 8a</li>
+          <li>Phone case + privacy screen</li>
+          <li>Small Faraday bag</li>
+          <li>Anonymous silent.link eSIM pre-installed</li>
+          <li>Encrypted VoIP app with private number</li>
+          <li>USB-C charging cable + adapter</li>
+          <li>30W USB power charger</li>
+        </ul>
+        <p class="product-price">$1,600 AUD</p>
+        <p class="product-note">Payment in XMR — live conversion at checkout</p>
+        <a href="product2.html" class="cta">Buy Now</a>
+      </div>
 
-        <!-- Anonymous Aussie -->
-        <div class="product-card">
-          <h3>Anonymous Aussie</h3>
-          <p class="subtitle">Anonymity Without Compromise</p>
-          <ul>
-            <li>✅ GrapheneOS Pixel 8a</li>
-            <li>✅ Phone case + privacy screen</li>
-            <li>✅ Small Faraday bag</li>
-            <li>✅ Anonymous silent.link eSIM pre-installed</li>
-            <li>✅ Encrypted VoIP app with private number</li>
-            <li>✅ USB-C charging cable + adapter</li>
-            <li>✅ 30W USB power charger</li>
-          </ul>
-          <p class="price">$1,600 AUD</p>
-          <p class="note">Payment in XMR — live conversion at checkout</p>
-          <a href="product2.html" class="btn">Buy Now</a>
-        </div>
+      <div class="product-card">
+        <h3>Operator Aussie</h3>
+        <p class="tagline">Air-Gapped Security for High-Risk Environments</p>
+        <ul class="products-list">
+          <li>GrapheneOS Pixel 8a (airplane mode enforced)</li>
+          <li>Phone case + privacy screen</li>
+          <li>Large Faraday bag</li>
+          <li>NitroWall / Blue Merle privacy router</li>
+          <li>Anonymous eSIM via router</li>
+          <li>Encrypted VoIP app with private number</li>
+          <li>1m Ethernet cable</li>
+          <li>USB-C charging cable + adapter</li>
+          <li>30W USB power charger</li>
+        </ul>
+        <p class="product-price">$2,500 AUD</p>
+        <p class="product-note">Payment in XMR — live conversion at checkout</p>
+        <a href="product3.html" class="cta">Buy Now</a>
+      </div>
 
-        <!-- Operator Aussie -->
-        <div class="product-card">
-          <h3>Operator Aussie</h3>
-          <p class="subtitle">Air-Gapped Security for High-Risk Environments</p>
-          <ul>
-            <li>✅ GrapheneOS Pixel 8a (airplane mode enforced)</li>
-            <li>✅ Phone case + privacy screen</li>
-            <li>✅ Large Faraday bag</li>
-            <li>✅ NitroWall / Blue Merle privacy router</li>
-            <li>✅ Anonymous eSIM via router</li>
-            <li>✅ Encrypted VoIP app with private number</li>
-            <li>✅ 1m Ethernet cable</li>
-            <li>✅ USB-C charging cable + adapter</li>
-            <li>✅ 30W USB power charger</li>
-          </ul>
-          <p class="price">$2,500 AUD</p>
-          <p class="note">Payment in XMR — live conversion at checkout</p>
-          <a href="product3.html" class="btn">Buy Now</a>
-        </div>
-
-        <!-- Sovereign Aussie -->
-        <div class="product-card highlight">
-          <h3>Sovereign Aussie</h3>
-          <p class="subtitle">Secure Connectivity Anywhere on Earth</p>
-          <ul>
-            <li>✅ GrapheneOS Pixel 8a (airplane mode enforced)</li>
-            <li>✅ Phone case + privacy screen</li>
-            <li>✅ Large Faraday bag</li>
-            <li>✅ NitroWall / Blue Merle privacy router</li>
-            <li>✅ Anonymous eSIM via router</li>
-            <li>✅ Encrypted VoIP app with private number</li>
-            <li>✅ Starlink Mini (anonymously registered)</li>
-            <li>✅ 1m + 10m Ethernet cables</li>
-            <li>✅ USB-C charging cable + adapter</li>
-            <li>✅ 30W USB power charger</li>
-          </ul>
-          <p class="price">$3,300 AUD</p>
-          <p class="note">Payment in XMR — live conversion at checkout</p>
-          <a href="product4.html" class="btn">Buy Now</a>
-        </div>
-
+      <div class="product-card">
+        <h3>Sovereign Aussie</h3>
+        <p class="tagline">Secure Connectivity Anywhere on Earth</p>
+        <ul class="products-list">
+          <li>GrapheneOS Pixel 8a (airplane mode enforced)</li>
+          <li>Phone case + privacy screen</li>
+          <li>Large Faraday bag</li>
+          <li>NitroWall / Blue Merle privacy router</li>
+          <li>Anonymous eSIM via router</li>
+          <li>Encrypted VoIP app with private number</li>
+          <li>Starlink Mini (anonymously registered)</li>
+          <li>1m + 10m Ethernet cables</li>
+          <li>USB-C charging cable + adapter</li>
+          <li>30W USB power charger</li>
+        </ul>
+        <p class="product-price">$3,300 AUD</p>
+        <p class="product-note">Payment in XMR — live conversion at checkout</p>
+        <a href="product4.html" class="cta">Buy Now</a>
       </div>
     </div>
   </section>
 
   <!-- Footer -->
-  <div id="footer"></div>
+  <footer>© 2025 Commsblack Mobile. All rights reserved.</footer>
+  <script src="main.js"></script>
 </body>
 </html>
