Replace with optimized static site

--- a/contact.html
+++ b/contact.html
@@ -1,242 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en-AU">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact | Commsblack</title>
-
-  <!-- Favicons -->
-  <link rel="icon" type="image/svg+xml" href="favicon.svg?v=4">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png?v=4">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png?v=4">
-  <link rel="icon" type="image/png" sizes="48x48" href="favicon-48.png?v=4">
-  <link rel="icon" type="image/png" sizes="64x64" href="favicon-64.png?v=4">
-  <link rel="icon" type="image/png" sizes="192x192" href="favicon-192.png?v=4">
-  <link rel="icon" type="image/png" sizes="512x512" href="favicon-512.png?v=4">
-  <link rel="shortcut icon" href="favicon.ico?v=4">
-
-  <style>
-    body {
-      margin: 0;
-      font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
-      background: linear-gradient(135deg, #f9fbff, #edf3ff);
-      color: #222;
-    }
-
-    /* HEADER */
-    header {
-      background: #fff;
-      padding: 0.8rem 2rem;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-    .logo {
-      display: flex;
-      align-items: center;
-    }
-    .logo svg {
-      width: 52px;
-      height: 52px;
-      margin-right: 0.5rem;
-    }
-    .logo-text {
-      font-size: 1.35rem;
-      font-weight: 600;
-    }
-    .logo-text .black { color: #000; }
-    .logo-text .blue { color: #3A76F0; font-weight: 500; margin-left: 0.25rem; }
-
-    nav {
-      display: flex;
-      align-items: center;
-    }
-    nav a {
-      margin: 0 1rem;
-      text-decoration: none;
-      color: #111;
-      font-weight: 700;
-      letter-spacing: 0.01em;
-    }
-    nav a:hover { color: #3A76F0; }
-
-    .menu-toggle {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
-      gap: 5px;
-    }
-    .menu-toggle span {
-      width: 24px;
-      height: 3px;
-      background: #111;
-      border-radius: 2px;
-    }
-    .mobile-nav {
-      display: none;
-      flex-direction: column;
-      background: #fff;
-      padding: 1rem;
-      position: absolute;
-      top: 70px;
-      right: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      border-radius: 8px;
-    }
-    .mobile-nav a {
-      margin: 0.5rem 0;
-      font-weight: 600;
-      color: #111;
-      text-decoration: none;
-    }
-    .mobile-nav a:hover { color: #3A76F0; }
-
-    /* MAIN CONTENT */
-    main {
-      max-width: 700px;
-      margin: 3rem auto;
-      padding: 2rem;
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 3px 12px rgba(0,0,0,0.12);
-      text-align: center;
-    }
-    main h1 {
-      font-size: 2.4rem;
-      font-weight: 700;
-      color: #111;
-      margin-bottom: 1rem;
-    }
-    main p {
-      font-size: 1.1rem;
-      color: #444;
-      margin-bottom: 2rem;
-    }
-
-    .contact-card {
-      background: #f9fbff;
-      border: 1px solid #ccd7ff;
-      border-radius: 14px;
-      padding: 2rem;
-      display: inline-block;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.08);
-    }
-    .contact-card svg {
-      width: 52px;
-      height: 52px;
-      margin-bottom: 1rem;
-      color: #3A76F0;
-    }
-    .contact-card h2 {
-      font-size: 1.5rem;
-      margin-bottom: 0.5rem;
-      color: #111;
-    }
-    .contact-card p {
-      font-family: monospace;
-      font-size: 1.2rem;
-      margin-bottom: 1rem;
-      color: #333;
-    }
-    .contact-card a {
-      display: inline-block;
-      padding: 0.7rem 1.4rem;
-      border-radius: 10px;
-      background: #3A76F0;
-      color: #fff;
-      font-weight: 600;
-      text-decoration: none;
-      transition: background 0.2s, transform 0.2s;
-    }
-    .contact-card a:hover { background: #2a5cd6; transform: translateY(-2px); }
-
-    /* FOOTER */
-    footer {
-      text-align: center;
-      padding: 2rem;
-      font-size: 0.9rem;
-      background: #fff;
-      color: #555;
-      margin-top: 3rem;
-    }
-
-    @media (max-width: 768px) {
-      nav { display: none; }
-      .menu-toggle { display: flex; }
-    }
-  </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Contact — Comms Black Mobile</title>
+  <meta name="description" content="Contact Comms Black Mobile via Signal." />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- HEADER -->
-  <header>
-    <div class="logo">
-      <!-- Globe + Padlock Logo -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-label="Commsblack Mobile logo">
-        <defs>
-          <clipPath id="globeClip">
-            <circle cx="32" cy="32" r="28"/>
-          </clipPath>
-          <style>
-            .globe { stroke:#3A76F0; stroke-width:2.5; fill:none; stroke-linecap:round; stroke-linejoin:round }
-            .lock-body { fill:#000; stroke:none }
-            .lock-shackle { stroke:#000; stroke-width:2.5; fill:none; stroke-linecap:round; stroke-linejoin:round }
-          </style>
-        </defs>
-        <rect x="18" y="28" width="28" height="20" rx="3" ry="3" class="lock-body"/>
-        <path d="M20 28 v-3 a12 12 0 0 1 24 0 v3" class="lock-shackle"/>
-        <g class="globe" clip-path="url(#globeClip)">
-          <line x1="-6" y1="32" x2="70" y2="32"/>
-          <line x1="32" y1="-6" x2="32" y2="70"/>
-          <path d="M26 -6 C10 24, 10 40, 26 70"/>
-          <path d="M38 -6 C54 24, 54 40, 38 70"/>
-        </g>
-        <circle cx="32" cy="32" r="28" class="globe"/>
-      </svg>
-      <div class="logo-text"><span class="black">Commsblack</span><span class="blue">Mobile</span></div>
-    </div>
-    <nav>
-      <a href="index.html">Mission</a>
-      <a href="products.html">Products</a>
-      <a href="academy.html">Academy</a>
-      <a href="faqs.html">FAQ’s</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-    <div class="menu-toggle" onclick="toggleMenu()"><span></span><span></span><span></span></div>
-  </header>
-
-  <div class="mobile-nav" id="mobileNav">
-    <a href="index.html" onclick="toggleMenu()">Mission</a>
-    <a href="products.html" onclick="toggleMenu()">Products</a>
-    <a href="academy.html" onclick="toggleMenu()">Academy</a>
-    <a href="faqs.html" onclick="toggleMenu()">FAQ’s</a>
-    <a href="contact.html" onclick="toggleMenu()">Contact</a>
-  </div>
-
-  <!-- MAIN CONTENT -->
-  <main>
-    <h1>Contact Us</h1>
-    <p>For privacy and security, Commsblack only accepts contact via Signal.</p>
-
-    <div class="contact-card">
-      <!-- Official Signal Logo -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 96" fill="currentColor">
-        <path d="M48 0C21.5 0 0 21.5 0 48c0 9.1 2.6 17.6 7.1 24.8L3.5 92.3c-.5 2 1.3 3.8 3.3 3.3l19.5-3.6C33.8 92.9 40.7 96 48 96c26.5 0 48-21.5 48-48S74.5 0 48 0zM48 88c-7.4 0-14.3-2.4-19.8-6.4l-1.2-.9-13.1 2.4 2.4-13.1-1-1.2C10.4 63.3 8 56.4 8 48 8 25.9 25.9 8 48 8s40 17.9 40 40-17.9 40-40 40z"/>
-      </svg>
-      <h2>Signal Handle</h2>
-      <p>@commsblack.10</p>
-      <a href="https://signal.me/#u/commsblack.10" target="_blank">Message on Signal</a>
-    </div>
+  <div id="site-header"></div>
+  <main class="section container">
+    <h1>Contact</h1>
+    <p>For privacy and security, we only accept contact via Signal.</p>
+    <h2>Signal handle</h2>
+    <p><code>@commsblack.10</code></p>
+    <p><a class="btn" href="https://signal.me/" rel="nofollow noopener">Message on Signal</a></p>
   </main>
-
-  <footer>
-    &copy; 2025 Commsblack Mobile. All rights reserved.
-  </footer>
-
-  <!-- Shared JS -->
-  <script src="main.js"></script>
+  <div id="site-footer"></div>
+  <script src="js/load.js" defer></script>
+  <script src="js/main.js" defer></script>
 </body>
 </html>
