--- a/academy.html
+++ b/academy.html
@@ -1,284 +1,67 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en-AU">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Commsblack Academy</title>
-
-  <!-- Favicons -->
-  <link rel="icon" type="image/svg+xml" href="favicon.svg?v=4">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png?v=4">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png?v=4">
-  <link rel="icon" type="image/png" sizes="48x48" href="favicon-48.png?v=4">
-  <link rel="icon" type="image/png" sizes="64x64" href="favicon-64.png?v=4">
-  <link rel="icon" type="image/png" sizes="192x192" href="favicon-192.png?v=4">
-  <link rel="icon" type="image/png" sizes="512x512" href="favicon-512.png?v=4">
-  <link rel="shortcut icon" href="favicon.ico?v=4">
-
-  <style>
-    body {
-      margin: 0;
-      font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
-      background: linear-gradient(135deg, #f9fbff, #edf3ff);
-      color: #222;
-    }
-
-    /* HEADER */
-    header {
-      background: #fff;
-      padding: 0.8rem 2rem;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-    .logo {
-      display: flex;
-      align-items: center;
-    }
-    .logo svg {
-      width: 52px;
-      height: 52px;
-      margin-right: 0.5rem;
-    }
-    .logo-text {
-      font-size: 1.35rem;
-      font-weight: 600;
-    }
-    .logo-text .black { color: #000; }
-    .logo-text .blue { color: #3A76F0; font-weight: 500; margin-left: 0.25rem; }
-
-    nav {
-      display: flex;
-      align-items: center;
-    }
-    nav a {
-      margin: 0 1rem;
-      text-decoration: none;
-      color: #111;
-      font-weight: 700;
-      letter-spacing: 0.01em;
-    }
-    nav a:hover { color: #3A76F0; }
-
-    .menu-toggle {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
-      gap: 5px;
-    }
-    .menu-toggle span {
-      width: 24px;
-      height: 3px;
-      background: #111;
-      border-radius: 2px;
-    }
-
-    .mobile-nav {
-      display: none;
-      flex-direction: column;
-      background: #fff;
-      padding: 1rem;
-      position: absolute;
-      top: 70px;
-      right: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      border-radius: 8px;
-    }
-    .mobile-nav a {
-      margin: 0.5rem 0;
-      font-weight: 600;
-      color: #111;
-      text-decoration: none;
-    }
-    .mobile-nav a:hover { color: #3A76F0; }
-
-    /* MAIN CONTENT */
-    main {
-      max-width: 900px;
-      margin: 3rem auto;
-      padding: 2rem;
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 3px 12px rgba(0,0,0,0.12);
-    }
-    main h1 {
-      font-size: 2.4rem;
-      font-weight: 700;
-      color: #111;
-      margin-bottom: 1rem;
-      text-align: center;
-    }
-    main p {
-      font-size: 1.1rem;
-      line-height: 1.7;
-      color: #444;
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-
-    h2 {
-      margin-top: 2rem;
-      font-size: 1.5rem;
-      color: #000;
-      font-weight: 600;
-    }
-
-    details {
-      background: #f9fbff;
-      border: 1px solid #ccd7ff;
-      border-radius: 10px;
-      padding: 1rem;
-      margin-top: 1rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
-    }
-    summary {
-      cursor: pointer;
-      font-weight: 600;
-      font-size: 1.1rem;
-    }
-    details p {
-      margin-top: 0.8rem;
-      font-size: 1rem;
-      color: #333;
-      text-align: left;
-    }
-
-    .cta-box {
-      margin-top: 2.5rem;
-      padding: 1.5rem;
-      background: #edf3ff;
-      border-radius: 12px;
-      border: 1px solid #ccd7ff;
-      text-align: center;
-    }
-    .cta-box h3 {
-      margin-bottom: 0.8rem;
-      font-size: 1.3rem;
-      font-weight: 600;
-      color: #111;
-    }
-    .cta-box p {
-      margin-bottom: 1rem;
-      color: #444;
-    }
-    .cta-box a {
-      display: inline-block;
-      padding: 0.7rem 1.4rem;
-      border-radius: 10px;
-      background: #3A76F0;
-      color: #fff;
-      font-weight: 600;
-      text-decoration: none;
-      transition: background 0.2s, transform 0.2s;
-    }
-    .cta-box a:hover { background: #2a5cd6; transform: translateY(-2px); }
-
-    /* FOOTER */
-    footer {
-      text-align: center;
-      padding: 2rem;
-      font-size: 0.9rem;
-      background: #fff;
-      color: #555;
-      margin-top: 3rem;
-    }
-
-    @media (max-width: 768px) {
-      nav { display: none; }
-      .menu-toggle { display: flex; }
-    }
-  </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Comms Black Academy</title>
+  <meta name="description" content="Learn how to secure your communications, protect your privacy, and operate with confidence." />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- HEADER -->
-  <header>
-    <div class="logo">
-      <!-- Globe + Padlock Logo -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-label="Commsblack Mobile logo">
-        <defs>
-          <clipPath id="globeClip">
-            <circle cx="32" cy="32" r="28"/>
-          </clipPath>
-          <style>
-            .globe { stroke:#3A76F0; stroke-width:2.5; fill:none; stroke-linecap:round; stroke-linejoin:round }
-            .lock-body { fill:#000; stroke:none }
-            .lock-shackle { stroke:#000; stroke-width:2.5; fill:none; stroke-linecap:round; stroke-linejoin:round }
-          </style>
-        </defs>
-        <rect x="18" y="28" width="28" height="20" rx="3" ry="3" class="lock-body"/>
-        <path d="M20 28 v-3 a12 12 0 0 1 24 0 v3" class="lock-shackle"/>
-        <g class="globe" clip-path="url(#globeClip)">
-          <line x1="-6" y1="32" x2="70" y2="32"/>
-          <line x1="32" y1="-6" x2="32" y2="70"/>
-          <path d="M26 -6 C10 24, 10 40, 26 70"/>
-          <path d="M38 -6 C54 24, 54 40, 38 70"/>
-        </g>
-        <circle cx="32" cy="32" r="28" class="globe"/>
-      </svg>
-      <div class="logo-text"><span class="black">Commsblack</span><span class="blue">Mobile</span></div>
-    </div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="products.html">Products</a>
-      <a href="academy.html">Academy</a>
-      <a href="faqs.html">FAQ’s</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-    <div class="menu-toggle" onclick="toggleMenu()"><span></span><span></span><span></span></div>
-  </header>
+  <div id="site-header"></div>
+  <main class="section container">
+    <h1>Comms Black Academy</h1>
+    <p class="muted">Learn how to secure your communications, protect your privacy, and operate with confidence in a digital‑first world.</p>
 
-  <div class="mobile-nav" id="mobileNav">
-    <a href="index.html" onclick="toggleMenu()">Home</a>
-    <a href="products.html" onclick="toggleMenu()">Products</a>
-    <a href="academy.html" onclick="toggleMenu()">Academy</a>
-    <a href="faqs.html" onclick="toggleMenu()">FAQ’s</a>
-    <a href="contact.html" onclick="toggleMenu()">Contact</a>
-  </div>
-
-  <!-- MAIN CONTENT -->
-  <main>
-    <h1>Commsblack Academy</h1>
-    <p>Learn how to secure your communications, protect your privacy, and operate with confidence in a digital-first world.</p>
-
-    <h2>Core Topics</h2>
-    <details><summary>GrapheneOS Basics</summary><p>GrapheneOS is an open-source, security-focused mobile OS built on the Android Open Source Project. It’s hardened against exploits, free from unnecessary apps, and puts you in control...</p></details>
-    <details><summary>VoIP & Anonymous Numbers</summary><p>Voice over IP lets you make calls and send texts over the internet...</p></details>
-    <details><summary>Data Security</summary><p>Your browsing and communications are constantly being profiled...</p></details>
-    <details><summary>Air-Gapped Devices</summary><p>Air-gapping means keeping a device permanently offline...</p></details>
-    <details><summary>Faraday Protection</summary><p>Faraday bags block wireless signals...</p></details>
-    <details><summary>Satellite Internet</summary><p>Satellite connectivity, like Starlink, allows you to operate...</p></details>
-
-    <h2>Advanced Topics</h2>
-    <details><summary>Monero (XMR)</summary><p>Monero (XMR) is a cryptocurrency designed for private...</p></details>
-    <details><summary>OPSEC (Operational Security)</summary><p>OPSEC is about protecting your intentions and activities...</p></details>
-    <details><summary>COMSEC (Communications Security)</summary><p>COMSEC focuses on keeping messages private...</p></details>
-    <details><summary>Countersurveillance</summary><p>Countersurveillance helps detect and avoid being monitored...</p></details>
-
-    <div class="cta-box">
-      <h3>Your Next Step</h3>
-      <p>Browse the topics above, expand the sections to learn more, and when you’re ready, explore Commsblack communication kits to put this knowledge into practice.</p>
-      <a href="products.html">View Communication Kits</a>
-    </div>
+    <section class="grid" style="grid-template-columns: 1fr;">
+      <div class="details">
+        <details>
+          <summary>GrapheneOS basics</summary>
+          <p>GrapheneOS is an open‑source, security‑focused mobile OS based on AOSP. It’s hardened against exploits, removes bloat, and gives you granular control. Start by creating a separate owner profile, using a strong screen lock, and installing only what you need via the “Apps” client.</p>
+        </details>
+        <details>
+          <summary>VoIP & anonymous numbers</summary>
+          <p>VoIP lets you call and text over the internet. Combined with privacy‑preserving providers, you can separate identity from everyday communications. Use per‑context numbers (work, travel, classifieds) and disable ID reuse.</p>
+        </details>
+        <details>
+          <summary>Data security</summary>
+          <p>Assume profiling on most networks. Prefer HTTPS, enable DNS‑over‑HTTPS, and keep your browser compartmentalised. Use separate profiles for sensitive tasks, and avoid mixing identities.</p>
+        </details>
+        <details>
+          <summary>Air‑gapped devices</summary>
+          <p>Air‑gapping means keeping a device permanently offline. For ultra‑sensitive workflows, prepare an offline device for note‑taking, crypto signing, or document viewing. Use a Faraday bag when moving it.</p>
+        </details>
+        <details>
+          <summary>Faraday protection</summary>
+          <p>Faraday bags block radio signals (cellular, Wi‑Fi, Bluetooth, NFC). Use them when transporting devices or when you need guaranteed offline behaviour.</p>
+        </details>
+        <details>
+          <summary>Satellite internet</summary>
+          <p>Satellite connectivity (e.g., Starlink) gives you coverage in remote areas or as a censorship fallback. Combine with a privacy router to avoid SIM identity leakage.</p>
+        </details>
+        <h2>Advanced topics</h2>
+        <details>
+          <summary>Monero (XMR)</summary>
+          <p>Monero focuses on privacy by default with ring signatures, stealth addresses, and confidential transactions. Treat wallets like keys — back them up and keep seed phrases offline.</p>
+        </details>
+        <details>
+          <summary>OPSEC</summary>
+          <p>Operational security is about protecting your plans and patterns. Separate identities, control information exposure, and keep communication channels compartmentalised.</p>
+        </details>
+        <details>
+          <summary>COMSEC</summary>
+          <p>Communications security keeps messages private and authentic. Prefer end‑to‑end encryption, verify safety numbers, and keep devices updated.</p>
+        </details>
+        <details>
+          <summary>Countersurveillance</summary>
+          <p>Understand likely threats, observe your environment, and reduce metadata. When in doubt, simplify and reduce your attack surface.</p>
+        </details>
+      </div>
+    </section>
+    <p><a class="btn" href="products.html">View Communication Kits</a></p>
   </main>
-
-  <footer>
-    &copy; 2025 Commsblack Mobile. All rights reserved.
-  </footer>
-
-  <script>
-    function toggleMenu() {
-      const nav = document.getElementById("mobileNav");
-      nav.style.display = nav.style.display === "flex" ? "none" : "flex";
-    }
-    window.addEventListener("resize", () => {
-      if (window.innerWidth > 768) {
-        document.getElementById("mobileNav").style.display = "none";
-      }
-    });
-  </script>
+  <div id="site-footer"></div>
+  <script src="js/load.js" defer></script>
+  <script src="js/main.js" defer></script>
 </body>
 </html>
