--- a/header.html
+++ b/header.html
@@ -1,66 +1,24 @@
-<!-- header.html -->
-<header>
-  <div class="logo">
-    <!-- Globe + Padlock Logo -->
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-label="Commsblack Mobile logo">
-      <defs>
-        <clipPath id="globeClip">
-          <circle cx="32" cy="32" r="28"/>
-        </clipPath>
-        <style>
-          .globe { stroke:#3A76F0; stroke-width:2.5; fill:none; stroke-linecap:round; stroke-linejoin:round }
-          .lock-body { fill:#000; stroke:none }
-          .lock-shackle { stroke:#000; stroke-width:2.5; fill:none; stroke-linecap:round; stroke-linejoin:round }
-        </style>
-      </defs>
-      <!-- Padlock -->
-      <rect x="18" y="28" width="28" height="20" rx="3" ry="3" class="lock-body"/>
-      <path d="M20 28 v-3 a12 12 0 0 1 24 0 v3" class="lock-shackle"/>
-      <!-- Globe -->
-      <g class="globe" clip-path="url(#globeClip)">
-        <line x1="-6" y1="32" x2="70" y2="32"/>
-        <line x1="32" y1="-6" x2="32" y2="70"/>
-        <path d="M26 -6 C10 24, 10 40, 26 70"/>
-        <path d="M38 -6 C54 24, 54 40, 38 70"/>
-      </g>
-      <circle cx="32" cy="32" r="28" class="globe"/>
-    </svg>
-    <div class="logo-text">
-      <span class="black">Commsblack</span>
-      <span class="blue">Mobile</span>
-    </div>
-  </div>
+<!doctype html>
+<!-- Header partial -->
+<header class="site-header" role="banner">
+  <div class="container">
+    <a class="brand" href="/comms-black-mobile/">
+      <img src="favicon.svg" alt="" aria-hidden="true" width="28" height="28" />
+      <span>Comms Black Mobile</span>
+    </a>
 
-  <!-- Desktop Nav -->
-  <nav>
-    <a href="index.html">Mission</a>
-    <a href="products.html">Products</a>
-    <a href="academy.html">Academy</a>
-    <a href="faqs.html">FAQ’s</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+    <button class="nav-toggle" aria-label="Toggle navigation" aria-controls="primary-nav" aria-expanded="false">
+      <span class="bar"></span><span class="bar"></span><span class="bar"></span>
+    </button>
 
-  <!-- Hamburger Button -->
-  <div class="menu-toggle" onclick="toggleMenu()">
-    <span></span>
-    <span></span>
-    <span></span>
+    <nav id="primary-nav" class="nav" aria-label="Primary">
+      <ul>
+        <li><a href="/comms-black-mobile/#mission">Mission</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="academy.html">Academy</a></li>
+        <li><a href="faqs.html">FAQs</a></li>
+        <li><a class="btn" href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
   </div>
 </header>
-
-<!-- Mobile Nav -->
-<div class="mobile-nav" id="mobileNav">
-  <a href="index.html" onclick="toggleMenu()">Mission</a>
-  <a href="products.html" onclick="toggleMenu()">Products</a>
-  <a href="academy.html" onclick="toggleMenu()">Academy</a>
-  <a href="faqs.html" onclick="toggleMenu()">FAQ’s</a>
-  <a href="contact.html" onclick="toggleMenu()">Contact</a>
-</div>
-
-<!-- Toggle Script -->
-<script>
-  function toggleMenu() {
-    const nav = document.getElementById("mobileNav");
-    nav.style.display = (nav.style.display === "flex") ? "none" : "flex";
-  }
-</script>
