--- a/index.html
+++ b/index.html
@@ -1,290 +1,58 @@
-<!DOCTYPE html> 
-<html lang="en">
+<!doctype html>
+<html lang="en-AU">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Commsblack Mobile</title>
-
-  <!-- Favicons -->
-  <link rel="icon" type="image/svg+xml" href="favicon.svg?v=4">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png?v=4">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png?v=4">
-  <link rel="icon" type="image/png" sizes="48x48" href="favicon-48.png?v=4">
-  <link rel="icon" type="image/png" sizes="64x64" href="favicon-64.png?v=4">
-  <link rel="icon" type="image/png" sizes="192x192" href="favicon-192.png?v=4">
-  <link rel="icon" type="image/png" sizes="512x512" href="favicon-512.png?v=4">
-  <link rel="shortcut icon" href="favicon.ico?v=4">
-
-  <style>
-    body {
-      margin: 0;
-      font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
-      background: linear-gradient(135deg, #f9fbff, #edf3ff);
-      color: #222;
-    }
-
-    /* HEADER */
-    header {
-      background: #fff;
-      padding: 0.8rem 2rem;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-    .logo {
-      display: flex;
-      align-items: center;
-    }
-    .logo svg {
-      width: 52px;
-      height: 52px;
-      margin-right: 0.5rem;
-    }
-    .logo-text {
-      font-size: 1.35rem;
-      font-weight: 600;
-    }
-    .logo-text .black { color: #000; }
-    .logo-text .blue { color: #3A76F0; font-weight: 500; margin-left: 0.25rem; }
-    
-    nav {
-      display: flex;
-      align-items: center;
-    }
-    nav a {
-      margin: 0 1rem;
-      text-decoration: none;
-      color: #111;
-      font-weight: 700;
-      letter-spacing: 0.01em;
-    }
-    nav a:hover { color: #3A76F0; }
-
-    /* Hamburger button */
-    .menu-toggle {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
-      gap: 5px;
-    }
-    .menu-toggle span {
-      width: 24px;
-      height: 3px;
-      background: #111;
-      border-radius: 2px;
-    }
-
-    /* Mobile menu */
-    .mobile-nav {
-      display: none;
-      flex-direction: column;
-      background: #fff;
-      padding: 1rem;
-      position: absolute;
-      top: 70px;
-      right: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      border-radius: 8px;
-    }
-    .mobile-nav a {
-      margin: 0.5rem 0;
-      font-weight: 600;
-      color: #111;
-      text-decoration: none;
-    }
-    .mobile-nav a:hover {
-      color: #3A76F0;
-    }
-
-    /* HERO */
-    .hero {
-      text-align: center;
-      padding: 5rem 2rem 4.5rem;
-      background: linear-gradient(135deg, #ffffff, #3A76F0);
-      color: #111;
-    }
-    .hero h1 {
-      font-size: 3.2rem;
-      font-weight: 700;
-      margin: 0 auto 1rem;
-      max-width: 1000px;
-      line-height: 1.1;
-    }
-    .hero p {
-      font-size: 1.25rem;
-      max-width: 700px;
-      margin: 0 auto 2rem;
-      line-height: 1.6;
-      color: #222;
-    }
-    .hero .cta a {
-      display: inline-block;
-      padding: 0.9rem 1.9rem;
-      border-radius: 12px;
-      font-weight: 600;
-      text-decoration: none;
-      transition: background 0.2s, transform 0.2s;
-      background: #3A76F0;
-      color: #fff;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.25);
-    }
-    .hero .cta a:hover { background: #2a5cd6; transform: translateY(-2px); }
-
-    /* MAIN CONTENT */
-    main {
-      max-width: 1100px;
-      margin: 0 auto;
-      padding: 3rem 2rem;
-    }
-    .topic {
-      background: #fff;
-      color: #333;
-      padding: 3rem 2.5rem;
-      margin: 2rem 0;
-      border-radius: 16px;
-      box-shadow: 0 3px 12px rgba(0,0,0,0.12);
-      text-align: center;
-      transition: transform 0.2s;
-    }
-    .topic:hover { transform: translateY(-4px); }
-    .topic h3 {
-      font-size: 1.9rem;
-      text-align: center;
-      color: #000;
-      margin: 0 0 1rem;
-      font-weight: 600;
-    }
-    .topic p {
-      font-size: 1.1rem;
-      line-height: 1.7;
-      max-width: 700px;
-      margin: 1.5rem auto 0;
-      color: #444;
-      text-align: center;
-    }
-
-    /* FOOTER */
-    footer {
-      text-align: center;
-      padding: 2rem;
-      font-size: 0.9rem;
-      background: #fff;
-      color: #555;
-    }
-
-    /* RESPONSIVE */
-    @media (max-width: 768px) {
-      nav { display: none; }
-      .menu-toggle { display: flex; }
-    }
-  </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Comms Black Mobile — Private. Secure. Anonymous.</title>
+  <meta name="description" content="Communication kits combining GrapheneOS phones, privacy hardware and anonymous connectivity. Take back control of your communications." />
+  <link rel="canonical" href="https://civpronto.github.io/comms-black-mobile/" />
+  <meta name="theme-color" content="#0b0f12" />
+  <link rel="preload" href="styles.css" as="style" />
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="favicon.ico" sizes="any">
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="favicon-180.png">
+  <link rel="manifest" href="site.webmanifest">
+  <meta property="og:title" content="Comms Black Mobile" />
+  <meta property="og:description" content="Private. Secure. Anonymous. Communication kits for privacy and freedom." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://civpronto.github.io/comms-black-mobile/" />
 </head>
 <body>
-  <!-- HEADER -->
-  <header>
-    <div class="logo">
-      <!-- Logo -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-label="Commsblack Mobile logo">
-        <defs>
-          <clipPath id="globeClip">
-            <circle cx="32" cy="32" r="28"/>
-          </clipPath>
-          <style>
-            .globe { stroke:#3A76F0; stroke-width:2.5; fill:none; stroke-linecap:round; stroke-linejoin:round }
-            .lock-body { fill:#000; stroke:none }
-            .lock-shackle { stroke:#000; stroke-width:2.5; fill:none; stroke-linecap:round; stroke-linejoin:round }
-          </style>
-        </defs>
-        <!-- Padlock -->
-        <rect x="18" y="28" width="28" height="20" rx="3" ry="3" class="lock-body"/>
-        <path d="M20 28 v-3 a12 12 0 0 1 24 0 v3" class="lock-shackle"/>
-        <!-- Globe -->
-        <g class="globe" clip-path="url(#globeClip)">
-          <line x1="-6" y1="32" x2="70" y2="32"/>
-          <line x1="32" y1="-6" x2="32" y2="70"/>
-          <path d="M26 -6 C10 24, 10 40, 26 70"/>
-          <path d="M38 -6 C54 24, 54 40, 38 70"/>
-        </g>
-        <circle cx="32" cy="32" r="28" class="globe"/>
-      </svg>
-      <div class="logo-text">
-        <span class="black">Commsblack</span>
-        <span class="blue">Mobile</span>
+  <a class="skip-link" href="#main" style="position: absolute;left:-999px">Skip to content</a>
+  <div id="site-header"></div>
+
+  <main id="main">
+    <section class="hero" id="mission">
+      <div class="container">
+        <span class="kicker">Private. Secure. Anonymous.</span>
+        <h1>Take back control of your communications</h1>
+        <p>We build communication kits that combine hardened GrapheneOS phones, privacy hardware, and anonymous services. Designed for simple everyday privacy, sovereign global connectivity, and seamless use at home, in travel, or off‑grid.</p>
+        <p><a class="btn" href="products.html">Explore products</a> <a class="btn secondary" href="academy.html">Learn the basics</a></p>
       </div>
-    </div>
+    </section>
 
-    <!-- Desktop Nav -->
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="products.html">Products</a>
-      <a href="academy.html">Academy</a>
-      <a href="faqs.html">FAQ’s</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-
-    <!-- Hamburger Button -->
-    <div class="menu-toggle" onclick="toggleMenu()">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-  </header>
-
-  <!-- Mobile Menu -->
-  <div class="mobile-nav" id="mobileNav">
-    <a href="index.html" onclick="toggleMenu()">Mission</a>
-    <a href="products.html" onclick="toggleMenu()">Products</a>
-    <a href="academy.html" onclick="toggleMenu()">Academy</a>
-    <a href="faqs.html" onclick="toggleMenu()">FAQ’s</a>
-    <a href="contact.html" onclick="toggleMenu()">Contact</a>
-  </div>
-
-  <!-- HERO -->
-  <section class="hero">
-    <h1>Private. Secure. Anonymous.</h1>
-    <p>Our mission is simple: give people back control of their communications — free from surveillance, exploitation, and unnecessary risk.</p>
-    <div class="cta">
-      <a href="products.html">Explore products</a>
-    </div>
-  </section>
-
-  <!-- MAIN CONTENT -->
-  <main>
-    <div class="topic" id="Mission">
-      <h3>Why we exist</h3>
-      <p>Big Tech and telecom providers profit from your data. Governments and third parties track your movements and communications. We exist to give you back control — with tools that protect your personal freedom, digital identity, and ability to connect on your own terms.</p>
-    </div>
-
-    <div class="topic" id="Products">
-      <h3>What we offer</h3>
-      <p>We build communication kits that combine hardened GrapheneOS phones, privacy hardware, and anonymous services. They are designed for simple everyday privacy, sovereign global connectivity, and seamless use at home, in travel, or off-grid.</p>
-    </div>
-
-    <div class="topic" id="Who">
-      <h3>Who it’s for</h3>
-      <p>Commsblack Mobile is for everyday users who value privacy, professionals handling sensitive information, travelers and global citizens, and anyone tired of being the product in the surveillance economy.</p>
-    </div>
-
-    <div class="topic" id="Difference">
-      <h3>The Commsblack difference</h3>
-      <p>No unnecessary apps, bloat, or trackers. Anonymous and secure by default. Transparent about third-party service costs. Simple, ready-to-use packages with data included. Ongoing support to help you recharge or manage services easily.</p>
-    </div>
+    <section class="section">
+      <div class="container feature-list">
+        <div class="card">
+          <h3>Why we exist</h3>
+          <p>Big Tech and telecom providers profit from your data. Governments and third parties track your movements and communications. We exist to give you back control — with tools that protect your personal freedom, digital identity, and ability to connect on your own terms.</p>
+        </div>
+        <div class="card">
+          <h3>Who it’s for</h3>
+          <p>Everyday users who value privacy, professionals handling sensitive information, travellers and global citizens, and anyone tired of being the product in the surveillance economy.</p>
+        </div>
+        <div class="card">
+          <h3>The difference</h3>
+          <p>No unnecessary apps, bloat, or trackers. Anonymous and secure by default. Transparent about third‑party service costs. Simple, ready‑to‑use packages with data included. Ongoing support to help you recharge or manage services easily.</p>
+        </div>
+      </div>
+    </section>
   </main>
 
-  <footer>
-    &copy; 2025 Commsblack Mobile. All rights reserved.
-  </footer>
+  <div id="site-footer"></div>
 
-  <!-- JS for menu -->
-  <script>
-    function toggleMenu() {
-      const nav = document.getElementById("mobileNav");
-      nav.style.display = nav.style.display === "flex" ? "none" : "flex";
-    }
-  </script>
+  <script src="js/load.js" defer></script>
+  <script src="js/main.js" defer></script>
 </body>
 </html>
