--- a/product2.html
+++ b/product2.html
@@ -1,163 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en-AU">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Checkout - Anonymous Aussie</title>
-
-  <!-- Favicons (copied from Product 1) -->
-  <link rel="icon" type="image/svg+xml" href="favicon.svg?v=4">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png?v=4">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png?v=4">
-  <link rel="icon" type="image/png" sizes="48x48" href="favicon-48.png?v=4">
-  <link rel="icon" type="image/png" sizes="64x64" href="favicon-64.png?v=4">
-  <link rel="icon" type="image/png" sizes="192x192" href="favicon-192.png?v=4">
-  <link rel="icon" type="image/png" sizes="512x512" href="favicon-512.png?v=4">
-  <link rel="shortcut icon" href="favicon.ico?v=4">
-
-  <style>
-    body { margin:0; font-family:"Inter","Helvetica Neue",Arial,sans-serif; background:linear-gradient(135deg,#f9fbff,#edf3ff); color:#222; text-align:center; }
-    header { background:#fff; padding:0.8rem 2rem; display:flex; align-items:center; justify-content:space-between; box-shadow:0 2px 6px rgba(0,0,0,0.15); position:sticky; top:0; z-index:1000; }
-    .logo { display:flex; align-items:center; }
-    .logo svg { width:52px; height:52px; margin-right:0.5rem; }
-    .logo-text { font-size:1.35rem; font-weight:600; }
-    .logo-text .black { color:#000; } .logo-text .blue { color:#3A76F0; margin-left:0.25rem; }
-    nav { display:flex; align-items:center; }
-    nav a { margin:0 1rem; text-decoration:none; color:#111; font-weight:700; } nav a:hover { color:#3A76F0; }
-    .menu-toggle { display:none; flex-direction:column; cursor:pointer; gap:5px; }
-    .menu-toggle span { width:24px; height:3px; background:#111; border-radius:2px; }
-    .mobile-nav { display:none; flex-direction:column; background:#fff; padding:1rem; position:absolute; top:70px; right:20px; box-shadow:0 4px 12px rgba(0,0,0,0.15); border-radius:8px; }
-    .mobile-nav a { margin:0.5rem 0; font-weight:600; color:#111; text-decoration:none; }
-    main { max-width:800px; margin:3rem auto; background:#fff; padding:2rem; border-radius:16px; box-shadow:0 4px 12px rgba(0,0,0,0.12); text-align:center; }
-    h1 { font-size:2.4rem; margin-bottom:0.5rem; color:#111; border-bottom:3px solid #3A76F0; display:inline-block; padding-bottom:0.4rem; }
-    h2 { margin-top:2rem; color:#111; }
-    .price { font-size:1.2rem; margin-bottom:1rem; }
-    pre { background:#f0f4ff; padding:12px; border-radius:6px; border:1px solid #ccd7ff; font-size:0.95em; word-break:break-all; white-space:pre-wrap; text-align:left; }
-    .copy-btn { margin-top:0.5rem; padding:8px 14px; background:#3A76F0; color:#fff; border:none; border-radius:8px; font-weight:600; cursor:pointer; transition:background 0.2s; }
-    .copy-btn:hover { background:#2a5cd6; }
-    .button { display:inline-block; padding:12px 20px; background:#3A76F0; color:#fff; text-decoration:none; border-radius:10px; font-weight:bold; transition:background 0.3s, transform 0.2s; }
-    .button:hover { background:#2a5cd6; transform:translateY(-2px); }
-    #qrcode { margin-top:15px; padding:10px; border:1px solid #ddd; border-radius:6px; background:#fff; display:inline-block; }
-    .privacy { margin-top:20px; padding:15px; background:#f9fbff; border-radius:6px; border:1px solid #ccd7ff; font-size:0.9em; color:#333; text-align:left; }
-    .note { font-size:0.9em; color:#555; }
-    footer { text-align:center; padding:2rem; font-size:0.9rem; background:#fff; color:#555; margin-top:3rem; }
-    @media (max-width:768px){ nav{display:none;} .menu-toggle{display:flex;} }
-  </style>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Anonymous Aussie — Checkout | Comms Black Mobile</title>
+  <meta name="description" content="Anonymous Aussie checkout and payment instructions." />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <!-- Updated Globe + Padlock Logo (copied from Product 1) -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-label="Commsblack Mobile logo">
-        <defs>
-          <clipPath id="globeClip">
-            <circle cx="32" cy="32" r="28"/>
-          </clipPath>
-          <style>
-            .globe { stroke:#3A76F0; stroke-width:2.5; fill:none; stroke-linecap:round; stroke-linejoin:round }
-            .lock-body { fill:#000; stroke:none }
-            .lock-shackle { stroke:#000; stroke-width:2.5; fill:none; stroke-linecap:round; stroke-linejoin:round }
-          </style>
-        </defs>
-        <!-- Padlock -->
-        <rect x="18" y="28" width="28" height="20" rx="3" ry="3" class="lock-body"/>
-        <path d="M20 28 v-3 a12 12 0 0 1 24 0 v3" class="lock-shackle"/>
-        <!-- Globe -->
-        <g class="globe" clip-path="url(#globeClip)">
-          <line x1="-6" y1="32" x2="70" y2="32"/>
-          <line x1="32" y1="-6" x2="32" y2="70"/>
-          <path d="M26 -6 C10 24, 10 40, 26 70"/>
-          <path d="M38 -6 C54 24, 54 40, 38 70"/>
-        </g>
-        <circle cx="32" cy="32" r="28" class="globe"/>
-      </svg>
-      <div class="logo-text"><span class="black">Commsblack</span><span class="blue">Mobile</span></div>
-    </div>
-    <nav>
-      <a href="index.html#Mission">Mission</a>
-      <a href="products.html">Products</a>
-      <a href="academy.html">Academy</a>
-      <a href="faqs.html">FAQ’s</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-    <div class="menu-toggle" onclick="toggleMenu()"><span></span><span></span><span></span></div>
-  </header>
+  <div id="site-header"></div>
+  <main class="section container" data-price-aud="1600" data-xmr-address="87iXvdRoor9LsBCn19sC4qQqc5FVf3TSTJXZ72Nbp4Debyv3kWnhEQmKHMhRT3FGYHicsdAiSQXqw3eCS7PXDkTSJtwmi2A">
+    <a href="products.html" class="btn secondary">← Back to products</a>
+    <h1>Anonymous Aussie — Checkout</h1>
+    <p class="muted">Price: <strong id="priceAud">Loading…</strong></p>
 
-  <div class="mobile-nav" id="mobileNav">
-    <a href="index.html#Mission" onclick="toggleMenu()">Mission</a>
-    <a href="products.html" onclick="toggleMenu()">Products</a>
-    <a href="academy.html" onclick="toggleMenu()">Academy</a>
-    <a href="faqs.html" onclick="toggleMenu()">FAQ’s</a>
-    <a href="contact.html" onclick="toggleMenu()">Contact</a>
-  </div>
-
-  <main>
-    <h1>Anonymous Aussie Checkout</h1>
-    <p class="price"><strong>Price:</strong> <span id="xmrPrice">Loading...</span></p>
-
-    <h2>Step 1: Send Payment</h2>
-    <p>Send exactly <strong><span id="xmrAmount">Loading...</span></strong> to the Monero address below:</p>
-
-    <pre id="xmrAddress">88xU19kWzt52W4awedVu9G5r1k2rLeeU9hmXixkPZKSGXyoNNqXZzW6cL1nrEmxW7PMWZEXjAgYky4ABL4qRDD4PHXV7J2n</pre>
-    <button class="copy-btn" onclick="copyAddress()">📋 Copy Address</button>
-
-    <p>Or scan this QR code with your Monero wallet:</p>
-    <div id="qrcode"></div>
-
-    <h2>Step 2: Confirm & Send Your Shipping Address</h2>
-    <p>After you’ve sent payment, open Signal using the button below and send:</p>
-    <ul style="text-align:left; display:inline-block;">
-      <li>📸 A screenshot of your wallet’s payment confirmation</li>
-      <li>📦 Your full shipping address</li>
-    </ul>
-
-    <p><a id="signalButton" href="#" target="_blank" class="button">Send via Signal</a></p>
-
-    <div class="privacy">
-      🔒 <strong>Your privacy matters.</strong><br>
-      Any personal details you share (like your shipping address) will only be used to complete your order.<br>
-      They will not be stored, profiled, or passed on. I respect your trust and handle your information with care.
+    <div class="card">
+      <h2>Step 1: Send payment</h2>
+      <p>Send exactly <strong id="xmrAmount">Loading…</strong> XMR to the Monero address below:</p>
+      <code class="wrap"><small>87iXvdRoor9LsBCn19sC4qQqc5FVf3TSTJXZ72Nbp4Debyv3kWnhEQmKHMhRT3FGYHicsdAiSQXqw3eCS7PXDkTSJtwmi2A</small></code>
+      <p>
+        <button class="btn" data-copy="87iXvdRoor9LsBCn19sC4qQqc5FVf3TSTJXZ72Nbp4Debyv3kWnhEQmKHMhRT3FGYHicsdAiSQXqw3eCS7PXDkTSJtwmi2A">Copy</button>
+        <a id="walletLink" class="btn secondary" href="#" rel="nofollow noopener">Open wallet</a>
+      </p>
+      <p id="priceError" class="muted" hidden>Live XMR price unavailable. You can still pay A$1,600 worth of XMR at the time of transfer. We’ll verify manually.</p>
     </div>
 
-    <hr>
-    <p class="note">Payments are verified manually. Once your XMR transaction is confirmed, you’ll receive an order confirmation on Signal.</p>
+    <div class="card">
+      <h2>Step 2: Confirm & share your shipping address</h2>
+      <p>After you’ve sent payment, open Signal and send:</p>
+      <ul>
+        <li>A screenshot of your wallet’s payment confirmation</li>
+        <li>Your full shipping address</li>
+        <li>The product name: <strong>Anonymous Aussie</strong></li>
+      </ul>
+      <p><a class="btn" href="https://signal.me/" rel="nofollow noopener">Send via Signal</a></p>
+      <p class="muted">Your privacy matters. Any personal details you share (like your shipping address) will only be used to complete your order. They will not be stored, profiled, or passed on.</p>
+    </div>
   </main>
-
-  <footer>&copy; 2025 Commsblack Mobile. All rights reserved.</footer>
-
-  <script>
-    function toggleMenu(){ const nav=document.getElementById("mobileNav"); nav.style.display=nav.style.display==="flex"?"none":"flex"; }
-    function copyAddress(){ const addr=document.getElementById("xmrAddress").innerText.trim(); navigator.clipboard.writeText(addr).then(()=>alert("Monero address copied!")); }
-
-    const AUD_PRICE=1600;
-    const address="88xU19kWzt52W4awedVu9G5r1k2rLeeU9hmXixkPZKSGXyoNNqXZzW6cL1nrEmxW7PMWZEXjAgYky4ABL4qRDD4PHXV7J2n";
-    const signalHandle="commsblack.10";
-
-    async function updateCheckout(){
-      try{
-        const res=await fetch("https://api.coingecko.com/api/v3/simple/price?ids=monero&vs_currencies=aud");
-        const data=await res.json();
-        const xmrToAud=data.monero.aud;
-        const xmrAmount=(AUD_PRICE/xmrToAud).toFixed(4);
-
-        document.getElementById("xmrPrice").textContent=`${AUD_PRICE} AUD (~${xmrAmount} XMR)`;
-        document.getElementById("xmrAmount").textContent=`${xmrAmount} XMR`;
-
-        const moneroURI=`monero:${address}?tx_amount=${xmrAmount}`;
-        document.getElementById("qrcode").innerHTML="";
-        new QRCode(document.getElementById("qrcode"),{text:moneroURI,width:240,height:240});
-
-        const signalMessage=`Hi, I’ve sent payment (~${xmrAmount} XMR). Here is my proof of payment screenshot and shipping address:`;
-        const encodedMessage=encodeURIComponent(signalMessage);
-        document.getElementById("signalButton").href=`https://signal.me/#eu/${signalHandle}?text=${encodedMessage}`;
-      }catch(err){
-        document.getElementById("xmrPrice").textContent="Error loading price.";
-        document.getElementById("xmrAmount").textContent="Error";
-      }
-    }
-    updateCheckout();
-  </script>
+  <div id="site-footer"></div>
+  <script src="js/load.js" defer></script>
+  <script src="js/main.js" defer></script>
+  <script src="js/checkout.js" defer></script>
 </body>
 </html>
